test/valid/ObjectToString/ObjectToString.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: ObjectToString.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class ObjectToString extends Object is

	method main : () -> String is
		new Object().toString()