test/invalid/fc34950_Overloading_of_booleans/A.plume
/**
 * A.plume
 *
 *
 * @author namartins
 * @version $Id: A.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 
  class A extends Object is	
 	field  id : Integer
 	field  state : Boolean
 	method  getallInformation: () -> String is
 	   id.toString() + state  //is not possible, String + Boolean